--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-tml, body, div, span, applet, object, iframe,
+html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -53,8 +53,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(3, 34, 37);
-    color: rgb(109, 177, 26);
+    background-color: black;
+    color: rgb(21, 38, 1);
 }
 
 header {
